Fix alignment issue and add select all dropdown
Fix houndci-bot reported issue

--- a/app/assets/stylesheets/hyrax/_file-listing.scss
+++ b/app/assets/stylesheets/hyrax/_file-listing.scss
@@ -97,7 +97,8 @@ h4 .small {
   text-decoration: none;
 }
 
-input.batch_document_selector {
+input.batch_document_selector,
+input.disabled {
   margin: 10px 10px 2px 10px;
   padding: 0px;
 }
